	consistent with the dependency checks in install.packages()).
  	
	It no longer reports on partially installed bundles (since
	members can be updated individually if a bundle is unbundled).

    o	old.packages() and hence updates.packages() will look for
	updates to members of package bundles before updates to the
	whole bundle: this allow bundles to be split and installations
	updated.


BUG FIXES

    o	The ... argument was not handled properly when ... was found
	in the enclosure of the current function, rather than in the
	function header itself.	 (This caused integrate() to fail in
	certain cases.)

    o	col2rgb("#00000080", TRUE) would return the background colour.
	(Reported by Hadley Wickham.)

    o	interaction() now ensures that the levels of the result are unique.

    o	packageDescription() and hence sessionInfo() now report the correct
	package version also for a non-attached loaded namespace of
	a version different from the default lib.loc.

    o	smoothScatter() now also works when e.g. xlim[2] < xlim[1].

    o	Invalid use of sprintf() such as sprintf("%S%") now give an error
	instead of a segmentation fault, as do very unusual cases such as
	sprintf("%s", tryCatch(stop(), error=identity)).

    o	parse_Rd() would mishandle braces when they occurred at
	the start of a line within an R string in an Rd file (reported
	by Alex Couture-Beil) or when they occurred in an R comment
	(reported by Mark Bravington).

    o	readNEWS() missed version numbers with more than one digit.

    o	building R --without-x no longer fails (PR#13665)

    o	printCoefmat(cbind(0,1)) now works too (PR#13677)

    o	bw.SJ(c(1:99, 1e6)) now works too.

    o	Rd2txt() could not handle empty descriptions of items in an Rd
    	file (reported by Mark Bravington), and did not wrap long lists
    	of arguments if they were given in a single item.

    o	stars() would do a partial plot when called with plot = FALSE;
    	it now consistently returns the locations of the stars.
