@@ -14,7 +14,7 @@
 #  A copy of the GNU General Public License is available at
 #  http://www.r-project.org/Licenses/
 
-RSiteSearch <- function(string, restrict = c("Rhelp02a", "functions", "docs"),
+RSiteSearch <- function(string, restrict = NULL,
 			format = c("normal", "short"),
 			sortby = c("score", "date:late", "date:early",
 			"subject", "subject:descending",
@@ -26,10 +26,7 @@ RSiteSearch <- function(string, restrict = c("Rhelp02a", "functions", "docs"),
 		     gsub(" ", "+", string))
     mpp <- paste0("max=", matchesPerPage)
     format <- paste0("result=", match.arg(format))
-
-    restrictVALS <- c("Rhelp02a", "Rhelp01", "functions", "docs", "R-devel")
-    restr <- match.arg(restrict, choices = restrictVALS, several.ok = TRUE)
-    restr <- paste(paste0("idxname=", restr), collapse = "&")
+    restr <- "idxname=functions"
 
     sortby <- match.arg(sortby)
     sortby <- paste0("sort=",
